Fix z-index header for ngMorph modal

--- a/2016/src/styles/layout/_header.scss
+++ b/2016/src/styles/layout/_header.scss
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 3000;
+  z-index: 1000;
 }
 
 .top-header {
